Small horizontal scrolling on mobile bug fix

--- a/src/utilities/theme/index.css
+++ b/src/utilities/theme/index.css
@@ -35,6 +35,12 @@ body {
   background-color: #1a1a1a;
 }
 
+/* App.css or global styles */
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
